c++: TYPENAME_TYPE lookup ignoring non-types [PR107773]

[N.B. this is a corrected version of
https://gcc.gnu.org/pipermail/gcc-patches/2022-November/607443.html ]

Currently when resolving a TYPENAME_TYPE for 'typename T::m' via
make_typename_type, we consider only type bindings of 'm' and ignore
non-type ones.  But [temp.res.general]/3 says, in a note, "the usual
qualified name lookup ([basic.lookup.qual]) applies even in the presence
of 'typename'", and qualified name lookup doesn't discriminate between
type and non-type bindings.  So when resolving such a TYPENAME_TYPE
we want the lookup to consider all bindings.

An exception is when we have a TYPENAME_TYPE corresponding to the
qualifying scope appearing before the :: scope resolution operator, such
as 'T::type' in 'typename T::type::m'.  In that case, [basic.lookup.qual]/1
applies, and lookup for such a TYPENAME_TYPE must ignore non-type
bindings.  So in order to correctly handle all cases, make_typename_type
needs an additional flag controlling whether lookup should ignore
non-types or not.

To that end this patch adds a type_only flag to make_typename_type and
defaults it to false (do not ignore non-types).  In contexts where we do
want to ignore non-types (when substituting into the scope of a
TYPENAME_TYPE, SCOPE_REF, USING_DECL) we call tsubst_typename_type
directly with type_only=true.

Bootstrapped and regtested on x86_64-pc-linux-gnu, does this look OK for
trunk?

	PR c++/107773

gcc/cp/ChangeLog:

	* cp-tree.h (make_typename_type): Add another boolean parameter
	that defaults to false.
	* decl.cc (make_typename_type): Use lookup_member instead of
	lookup_field.  Pass want_type=type_only instead of =false to
	lookup_member.  Generalize format specifier in diagnostic to
	handle both type and non-type bindings.
	* pt.cc (tsubst_typename_type): Add another boolean parameter
	that defaults to false and pass it to make_typename_type.  If
	TYPE_CONTEXT is a TYPENAME_TYPE recurse with type_only=true
	instead of substituting it via tsubst.
	(tsubst_decl) <case USING_DECL>: If the scpoe is a TYPENAME_TYPE
	call tsubst_typename_type directly with type_only=true instead
	of substituting it via tsubst.
	(tsubst_qualified_id): Likewise.
	* search.cc (lookup_member): Document default argument.

gcc/testsuite/ChangeLog:

	* g++.dg/template/typename24.C: New test.
	* g++.dg/template/typename25.C: New test.
	* g++.dg/template/typename26.C: New test.